# defcon32_badge_hacks

./: .gitignore  CMakeLists.txt  Makefile  README.md  chars.c  chars.h  crt_rp2040.S  crt_rp2350.S  fatfs.h  gbC.c  gbCartHeader.h  linker_rp2350_defcon.lkr  main_rp2350_defcon.c  mappersC.c  mbc.c  memMap.h  pioI2C.h  pioIrdaSIR.h  pioWS2812.c  printf.c  sdHwRP2350.c  settings.c  test  test.c  ui.c  ui.h  utf.c  utf.h  videoC.c
inc_RP2350/: 2350.h  RP2350.h  cpu.h
inc_RP2350/hardware/: address_mapped.h  platform_defs.h  rcp.h
inc_RP2350/hardware/regs/: accessctrl.h  adc.h  addressmap.h  bootram.h  busctrl.h  clocks.h  coresight_trace.h  dma.h  dreq.h  glitch_detector.h  hstx_ctrl.h  hstx_fifo.h  i2c.h  intctrl.h  io_bank0.h  io_qspi.h  m33.h  m33_eppb.h  otp.h  otp_data.h  pads_bank0.h  pads_qspi.h  pio.h  pll.h  powman.h  psm.h  pwm.h  qmi.h  resets.h  riscv_dm.h  rosc.h  rp_ap.h  rvcsr.h  sha256.h  sio.h  spi.h  syscfg.h  sysinfo.h  tbman.h  ticks.h  (+8 more)
inc_RP2350/hardware/structs/: accessctrl.h  otp.h  pwm.h  qmi.h  sio.h  usb.h
inc_RP2350/pico/: error.h  platform.h
src/: 2350.h  dispDefcon.c  dispDefcon.h  display.c  display.h  ducky.c  ducky.h  fatfs.c  fonts.c  fonts.h  frontend.h  gb.c  gb.h  gbCore.h  hid_keycodes.c  hid_keycodes.h  input.c  input.h  lcdFrame.h  main.c  main_rp2350_defcon.c  mbc.h  oled.c  oled.h  pinoutRp2350defcon.h  pioI2C.c  pioIrdaSIR.c  printf.h  qspi.h  qspi2350.c  sd.c  sd.h  settings.c  settings.h  sleep.h  sleepDefcon.c  timebase.c  timebase.h  tusb_config.h  ui.c  (+4 more)
src/display/: dispDefcon.c  oled.c
src/gameboy/: gb.avr.h  gb.c  gbC.c  mappersC.c  mbc.c  videoC.c
src/pio/: pioI2C.c  pioIrdaSIR.c  pioWS2812.c  pioWS2812.h
src/sd/: fatfs.c  sd.c  sdHwRP2350.c
